<resources>
    <string name="app_name">Forgive Yourself</string>
    <string name="btn_add">Add</string>
    <string name="hint_mistake">Enter mistake</string>
    <string name="btn_clear">Forgive Yourself</string>
    <string name="help">Help</string>
    <string name="help_header">The purpose of this application is to help track your mistakes during the year.\n
At least once a year you should forgive yourself and wipe the slate clean.\n
You cannot edit or remove individual items, only forgive yourself by wiping the slate.\n
If you need help doing so, these numbers might be useful:</string>
    <string name="au">Australia:</string>
    <string name="btn_au">BeyondBlue</string>
    <string name="uk">UK:</string>
    <string name="btn_uk">SupportLine</string>
    <string name="us">USA:</string>
    <string name="btn_us">SAMHSA</string>
    <string name="help_footer">Note: This app is not associated with the above services.</string>
    <string name="notifications">Notifications</string>
    <string name="notif_channel">Reminder</string>
    <string name="notif_channel_description">Show a reminder notification</string>
    <string name="notif_text">It is time to forgive yourself</string>
    <string name="lbl_enable_notification">Enable Notification</string>
    <string name="notifications_footer">Try to clear the list once a year. Maybe New Year, your birthday, Chinese New Year, Ramadan, or Yom Kippur.</string>
    <string name="notifications_prompt">Would you like to configure a notification?</string>
    <string name="clear_prompt">Are you sure you have forgiven yourself?</string>
</resources>
