<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HelpActivity"
    android:padding="@dimen/padding_default">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_header"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/lbl_au"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/au"
        android:gravity="end"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        app:layout_constraintTop_toTopOf="@+id/btn_au"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintBottom_toBottomOf="@+id/btn_au"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_au"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_default"
        android:text="@string/btn_au"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center"/>

    <TextView
        android:id="@+id/lbl_uk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uk"
        android:gravity="end"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        app:layout_constraintTop_toTopOf="@+id/btn_uk"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintBottom_toBottomOf="@+id/btn_uk"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_uk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_default"
        android:text="@string/btn_uk"
        app:layout_constraintTop_toBottomOf="@+id/btn_au"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center"/>

    <TextView
        android:id="@+id/lbl_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/us"
        android:gravity="end"
        android:layout_marginEnd="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        app:layout_constraintTop_toTopOf="@+id/btn_us"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintBottom_toBottomOf="@+id/btn_us"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_default"
        android:text="@string/btn_us"
        app:layout_constraintTop_toBottomOf="@+id/btn_uk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_footer"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btn_us"/>

</androidx.constraintlayout.widget.ConstraintLayout>